interactive state complete

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,5 +3,9 @@
 @import "base/base";
 @import "base/typography";
 
+@import "components/buttons";
+@import "components/overlay";
+
 @import "layout/header";
+@import "layout/main";
 @import "layout/navigation";
