--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,4 +15,32 @@ body {
   font-family: $font-primary;
   font-size: 1.8rem;
   font-weight: 500;
+  background-color: $secondaryWhite;
+  min-height: 78rem;
+  position: relative;
+}
+
+.btn {
+  border: none;
+  background-color: transparent;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  &:link {
+    text-decoration: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    min-height: 100vh;
+  }
 }
